update ci script for release-2.1 - add log4j config for ci test - add jenkins profile